--- a/css/styles.css
+++ b/css/styles.css
@@ -1,1 +1,23 @@
 /* Basic CSS styling */
+
+h1 {
+    color: blue;
+    text-align: center;
+
+}
+
+h2 {
+    font-style: italic;
+    text-align: center;
+    color: teal;
+
+}
+
+p {
+    color: gray;
+
+}
+
+body {
+    background-color: skyblue;
+}
